# timelapse

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  timelapse.example.yaml
docs/superpowers/plans/: 2026-03-28-timelapse-system.md  2026-03-28-web-ui.md  2026-04-05-weather-integration.md  2026-04-06-cloudflare-jwt-verification.md
docs/superpowers/specs/: 2026-03-28-timelapse-design.md  2026-03-28-web-ui-design.md  2026-04-05-weather-integration-design.md  2026-04-06-cloudflare-jwt-verification-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  router.js  style.css
frontend/src/__tests__/: api.test.js  components.test.js  views.test.js
frontend/src/components/: CameraPreview.vue  ImageCompare.vue  ImageGrid.vue  ImageViewer.vue  JobQueue.vue  NavBar.vue  RenderForm.vue  StatusCard.vue  VideoCard.vue  (+2 more)
scripts/: install.sh  uninstall.sh
src/timelapse/: __init__.py  camera.py  cli.py  config.py  jobs.py  notifier.py  renderer.py  scheduler.py  service.py  storage.py  weather.py  worker.py
systemd/: timelapse-capture.service  timelapse-render.service  timelapse-web.service  timelapse.target
tests/: conftest.py  test_camera.py  test_cli.py  test_config.py  test_integration.py  test_jobs.py  test_notifier.py  test_renderer.py  test_scheduler.py  test_service.py  test_storage.py  test_weather.py  test_web_access.py  test_web_captures.py  test_web_images.py  test_web_integration.py  test_web_renders.py  test_web_schema.py  test_web_status.py  test_web_weather.py  test_worker.py
(+15 files in other folders)
